# aelliptic-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aelliptic-bot.kdev4  bot.cpp  bot.hpp  commands.hpp  logging.cpp  logging.hpp  main.cpp  watchdog.cpp  watchdog.hpp
.kdev4/: aelliptic-bot.kdev4
cmake/: FindSQLite3.cmake
commands/: command_base.hpp  start.cpp  start.hpp
src/: base64.cpp  base64.hpp  bot.hpp  commands.hpp  console.cpp  database.cpp  database.hpp  irc_client.cpp  irc_client.hpp  irc_handler.cpp  irc_handler.hpp  irc_socket.cpp  irc_socket.hpp  logging.cpp  logging.hpp  main.cpp
src/commands/: base64.cpp  base64.hpp  cbase64.cpp  cbase64.hpp  cconvert.cpp  cconvert.hpp  ccore.cpp  ccore.hpp  ccounter.cpp  ccounter.hpp  command_base.hpp  convert.cpp  convert.hpp  creverse.cpp  creverse.hpp  cstart.cpp  cstart.hpp  start.cpp  start.hpp
tests/: base64_test.hpp  main.cpp  tokenizer_test.hpp
