cmake_minimum_required(VERSION 2.8)
project(aelliptic-bot CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
set(Boost_USE_MULTITHREADED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(Boost COMPONENTS system iostreams REQUIRED)
find_package (SQLite3 REQUIRED)
add_subdirectory(tgbot-cpp)
include_directories(${OPENSSL_INCLUDE_DIR} ${Boost_INCLUDE_DIR} 
                    tgbot-cpp/include src ${SQLITE3_INCLUDE_DIRS})
option(NO_TRACE_LOG "No trace logging" OFF)
if (NO_TRACE_LOG)
    add_definitions(-DAE_NO_TRACE_LOG)
endif()
set(BOT_SOURCES src/main.cpp src/logging.cpp src/base64.cpp)
set(BOT_COMMANDS src/commands/start.cpp src/commands/base64.cpp src/commands/convert.cpp)
add_executable(aelliptic-bot ${BOT_SOURCES} ${BOT_COMMANDS})
target_include_directories(aelliptic-bot SYSTEM PRIVATE 
                           tgbot-cpp/include
                           ${SQLITE3_INCLUDE_DIRS})
target_link_libraries(aelliptic-bot ${CMAKE_THREAD_LIBS_INIT}
        ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} TgBot ${SQLITE3_LIBRARIES})
option(ENABLE_TESTS "Enable make test target." ON)
if (ENABLE_TESTS)
    set(BUILD_GTEST ON)
    set(BUILD_GMOCK OFF)
    set(INSTALL_GTEST OFF)
    set(INSTALL_GMOCK OFF)
    add_subdirectory(gtest)
    enable_testing()

    set(TEST_SOURCES src/logging.cpp src/base64.cpp tests/main.cpp)
    add_executable(aelliptic-bot-tests ${TEST_SOURCES})
    target_link_libraries(aelliptic-bot-tests tgbot ${CMAKE_THREAD_LIBS_INIT} ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} gtest)
    target_include_directories(aelliptic-bot-tests PRIVATE ${PROJECT_SOURCE_DIR}/src)
    add_test(aelliptic-bot-tests aelliptic-bot-tests)
endif ()
